[package]
name = "dzgt-utils"
version = "0.2.1"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/wugren/dzgt-utils.git"
description = "private library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyfs-base = "0.6.12"
cyfs-core = "0.6.7"
log = "0.4.17"
cyfs-lib = {version = "0.8.3", optional = true}
cyfs-util = {version = "0.6.8", optional = true}
async-std = "1.12.0"
async-trait = "0.1.68"
serde = "1.0.160"
serde_json = "1.0.96"
sfo-http = "0.2"
sfo-sql = "0.1"
tide = "0.16.0"
mini-moka = "0.10.0"
lazy_static = "1.4.0"

[features]
stack_cache = []
stack = ["cyfs-lib", "cyfs-util"]
